--- a/src/work/components/WorkAside.scss
+++ b/src/work/components/WorkAside.scss
@@ -116,6 +116,7 @@
                 font-size: 10px;
                 width: fit-content;
                 color: #2b333e;
+                line-height: 16px;
             }
 
             .work-status-process {
