--- a/src/project/common/components/ProjectChangeModal.scss
+++ b/src/project/common/components/ProjectChangeModal.scss
@@ -46,7 +46,7 @@
     }
 
     .title {
-        border-bottom: 1px solid #f0f2f5;
+        // border-bottom: 1px solid #f0f2f5;
     }
 
     .change-project-box {
