--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -13,7 +13,14 @@
 
     .orga-aside {
         height: 100%;
-        background-color: var(--thoughtware-gray);
+        background-color: var(--thoughtware-gray-600);
+
+        .orga-aside-name {
+            height: 40px;
+            line-height: 40px;
+            padding: 0 20px;
+            border-bottom: 1px solid #f0f0f0;
+        }
 
         // padding-top: 20px;
         .orga-aside-top {
