修改菜单首页样式

--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -34,6 +34,7 @@ $form-input-color: #e3e8f07d;
     --thoughtware-gray-500: #999;
     --thoughtware-gray-600: #fafbfc;
     --thoughtware-gray-700: #f7f7f7;
+    --thoughtware-gray-800: #fafbff;
     --thoughtware-gray: #efefef;
     
     --thoughtware-padding: 20px;
