--- a/src/home/common/components/Layout.scss
+++ b/src/home/common/components/Layout.scss
@@ -14,6 +14,7 @@
         .layout-page {
             flex: 1;
             height: calc(100vh - var(--thoughtware-head-height));
+            overflow: hidden;
         }
     }
 
