--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -43,7 +43,8 @@
     z-index: 1;
     padding: 15px 0;
     color: #000;
-
+    max-height: 500px;
+    overflow: auto;
     .sort-box {
         .sort-title {
             color: #202d407a;
