--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -196,162 +196,168 @@
         }
     }
 
-    .recent-click {
-        margin: 0 auto;
+    // .recent-click {
+    //     margin: 0 auto;
+    //     margin-top: 15px;
+    //     padding: var(--thoughtware-padding);
+    //     background-color: #fff;
+    //     border-radius: 4px;
+    //     flex: 1;
+    //     margin-bottom: 15px;
+
+    //     &-title {
+    //         width: 100%;
+    //         font-weight: var(--thoughtware-font-weight-bold);
+    //         display: flex;
+    //         align-items: center;
+    //         justify-content: space-between;
+
+    //         // border-bottom: 1px solid #f0f0f0;
+    //         .more:hover {
+    //             text-decoration: underline;
+    //         }
+
+    //         .more {
+    //             color: var(--thoughtware-blue);
+    //             margin-left: 10px;
+    //             cursor: pointer;
+    //             display: flex;
+    //             align-items: center;
+    //         }
+    //     }
+
+    //     &-list {
+    //         margin-top: 10px;
+    //     }
+
+    //     .project-item {
+    //         display: flex;
+    //         align-items: center;
+
+    //         .project-item-content {
+    //             .content-name:hover {
+    //                 cursor: pointer;
+    //                 color: var(--thoughtware-blue);
+    //             }
+
+    //             .content-type {
+    //                 font-size: 12px;
+    //                 color: var(--thoughtware-gray-500);
+    //             }
+    //         }
+
+    //     }
+
+    //     .work-item {
+    //         display: flex;
+    //         align-items: center;
+    //         margin-bottom: 10px;
+    //         gap: 20px;
+
+    //         .work-left {
+    //             display: flex;
+    //             align-items: center;
+    //             gap: 5px;
+    //             flex: 1;
+    //             flex-shrink: 1;
+    //             min-width: 0;
+
+    //             .work-content {
+    //                 flex-shrink: 1;
+    //                 min-width: 0;
+
+    //                 .content-name:hover {
+    //                     cursor: pointer;
+    //                     color: var(--thoughtware-blue);
+    //                 }
+
+    //                 .content-name {
+    //                     text-overflow: ellipsis;
+    //                     white-space: nowrap;
+    //                     overflow: hidden;
+    //                 }
+
+    //                 .content-type {
+    //                     font-size: 13px;
+    //                     color: var(--thoughtware-gray-500);
+    //                 }
+    //             }
+    //         }
+
+    //         .work-project {
+    //             width: 150px;
+    //             font-size: 12px;
+    //             text-overflow: ellipsis;
+    //             white-space: nowrap;
+    //             overflow: hidden;
+    //         }
+
+    //         .work-status {
+    //             padding: 2px 3px;
+    //             background: #e2e1e4;
+    //             border-radius: 4px;
+    //             font-size: 10px;
+    //             width: fit-content;
+    //             color: #2b333e;
+    //         }
+
+    //         .work-status-process {
+    //             background: #b0d5dfa1;
+    //             color: #132c33;
+    //         }
+
+    //         .work-status-done {
+    //             background: #dfecd5e3;
+    //             color: #5e5314;
+    //         }
+
+    //         .work-time {
+    //             text-align: right;
+    //         }
+    //     }
+
+    //     .version-item {
+    //         display: flex;
+    //         align-items: center;
+    //         margin-bottom: 10px;
+
+    //         .version-content {
+    //             .content-name:hover {
+    //                 cursor: pointer;
+    //                 color: var(--thoughtware-blue);
+    //             }
+
+    //             .content-type {
+    //                 font-size: 12px;
+    //                 color: var(--thoughtware-gray-500);
+    //             }
+    //         }
+    //     }
+
+    //     .sprint-item {
+    //         display: flex;
+    //         align-items: center;
+    //         margin-bottom: 10px;
+
+    //         .sprint-content {
+    //             .content-name:hover {
+    //                 cursor: pointer;
+    //                 color: var(--thoughtware-blue);
+    //             }
+
+    //             .content-type {
+    //                 font-size: 12px;
+    //                 color: var(--thoughtware-gray-500);
+    //             }
+    //         }
+    //     }
+
+    // }
+    .statistics-box {
+        display: flex;
+        width: 100%;
+        gap: 10px;
         margin-top: 15px;
-        padding: var(--thoughtware-padding);
-        background-color: #fff;
-        border-radius: 4px;
-        flex: 1;
-        margin-bottom: 15px;
-
-        &-title {
-            width: 100%;
-            font-weight: var(--thoughtware-font-weight-bold);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-
-            // border-bottom: 1px solid #f0f0f0;
-            .more:hover {
-                text-decoration: underline;
-            }
-
-            .more {
-                color: var(--thoughtware-blue);
-                margin-left: 10px;
-                cursor: pointer;
-                display: flex;
-                align-items: center;
-            }
-        }
-
-        &-list {
-            margin-top: 10px;
-        }
-
-        .project-item {
-            display: flex;
-            align-items: center;
-
-            .project-item-content {
-                .content-name:hover {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-
-        }
-
-        .work-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-            gap: 20px;
-
-            .work-left {
-                display: flex;
-                align-items: center;
-                gap: 5px;
-                flex: 1;
-                flex-shrink: 1;
-                min-width: 0;
-
-                .work-content {
-                    flex-shrink: 1;
-                    min-width: 0;
-
-                    .content-name:hover {
-                        cursor: pointer;
-                        color: var(--thoughtware-blue);
-                    }
-
-                    .content-name {
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                        overflow: hidden;
-                    }
-
-                    .content-type {
-                        font-size: 13px;
-                        color: var(--thoughtware-gray-500);
-                    }
-                }
-            }
-
-            .work-project {
-                width: 150px;
-                font-size: 12px;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-
-            .work-status {
-                padding: 2px 3px;
-                background: #e2e1e4;
-                border-radius: 4px;
-                font-size: 10px;
-                width: fit-content;
-                color: #2b333e;
-            }
-
-            .work-status-process {
-                background: #b0d5dfa1;
-                color: #132c33;
-            }
-
-            .work-status-done {
-                background: #dfecd5e3;
-                color: #5e5314;
-            }
-
-            .work-time {
-                text-align: right;
-            }
-        }
-
-        .version-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-
-            .version-content {
-                .content-name:hover {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-        }
-
-        .sprint-item {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
-
-            .sprint-content {
-                .content-name:hover {
-                    cursor: pointer;
-                    color: var(--thoughtware-blue);
-                }
-
-                .content-type {
-                    font-size: 12px;
-                    color: var(--thoughtware-gray-500);
-                }
-            }
-        }
-
     }
-
+   
 }
