--- a/src/home/common/components/WorkItemTrend.scss
+++ b/src/home/common/components/WorkItemTrend.scss
@@ -1,11 +1,8 @@
-.new-trend {
-    padding: 12px 20px;
+.home-workitem-trend {
     border-radius: 4px;
-    margin-bottom: 10px;
-    height: 100%;
     background-color: #fff;
     padding: var(--thoughtware-padding);
-    // box-shadow: 0 2px 15px rgba(0,0,0,.15);
+    flex: 1;
     &-top {
         height: 40px;
         line-height: 40px;
@@ -13,17 +10,16 @@
         font-size: 16px;
         display: flex;
         margin-bottom: 10px;
-
-        .new-trend-title {
+        .home-workitem-trend-title {
             display: flex;
             justify-content: space-between;
             align-items: center;
             width: 100%;
         }
     }
-    .new-trend-content {
+    .home-workitem-trend-content {
         width: 100%;
-        height: calc(100% - 74px);
+        height: 500px;
         .delete-warning {
             font-weight: 600;
             text-align: center;
