--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -88,6 +88,12 @@ $form-input-color: #e3e8f07d;
     height: 32px;
 }
 
+.icon-30 {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+}
+
 .img-25 {
     width: 25px;
     height: 25px;
