--- a/src/work/components/WorkDocumentList.scss
+++ b/src/work/components/WorkDocumentList.scss
@@ -25,4 +25,8 @@
         padding: 15px;
         border-radius: 4px;
     }
+    .document-title {
+        display: flex;
+        align-items: center;
+    }
 }
