--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -98,6 +98,10 @@ $form-input-color: #e3e8f07d;
     width: 25px;
     height: 25px;
 }
+.icon-10 {
+    width: 10px;
+    height: 10px;
+}
 .icon-12 {
     width: 12px;
     height: 12px;
