--- a/src/home/search/components/Search.scss
+++ b/src/home/search/components/Search.scss
@@ -1,31 +1,42 @@
 .search {
+    .short-box {
+        width: 25px;
+        transition: width 0.3s;
+    }
+    .long-box {
+        width: 375px;
+        transition: width 0.3s;
+        border: 2px solid #dddd;
+        padding-right: 10px;
+    }
     .search-box {
-        height: 30px;
-
+        height: 25px;
         background: #fff;
         display: flex;
-        border-radius: 7px;
-        padding: 0 10px;
-        border: 2px solid #dddd;
+        border-radius: 25px;
+        
         align-items: center;
-
-        .search-input {
+        justify-content: center;
+        cursor: pointer;
+        .search-box-input {
             border: none;
             height: 100%;
-            width: 90%;
             outline: none;
-            margin-left: 10px;
             color: #000;
+            border-radius: 25px;
+            padding: 0 10px;
+        }
+        .show-input {
+            width: 350px;
+        }
+        .hidden-input {
+            width: 0;
+            height: 0;
+            display: none;
         }
     }
 
-    .search-short-box {
-        width: 400px;
-    }
 
-    .search-long-box {
-        width: 400px;
-    }
 }
 
 .hidden-box {
@@ -33,17 +44,18 @@
 }
 
 .show-box {
-    width: 500px;
+    width: 375px;
+    max-height: 500px;
     min-height: 100px;
+    transition: width 0.3s;
     position: absolute;
     background-color: #fff;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px, rgba(9, 30, 66, 0.31) 0px 0px 1px;
-    margin-top: 5px;
+    // margin-top: 5px;
     border-radius: 3px;
     z-index: 1;
     padding: 15px 0;
     color: #000;
-    max-height: 500px;
     overflow: auto;
     .sort-box {
         .sort-title {
@@ -177,93 +189,3 @@
     }
 }
 
-// .search-resule {
-//     .search-box {
-//         height: 50px;
-//         width: 100%;
-//         background: #fff;
-//         display: flex;
-//         border-radius: 7px;
-//         border: 2px solid #dddd;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin: 20px 0;
-
-//         .search-input {
-//             border: none;
-//             height: 100%;
-//             width: 90%;
-//             outline: none;
-//             margin-left: 10px;
-//         }
-
-//         .search-botton {
-//             width: 100px;
-//             height: 100%;
-//             line-height: 44px;
-//             text-align: center;
-//             background-color: powderblue;
-//             color: #999;
-//             font-weight: var(--thoughtware-font-weight-bold);
-//             font-size: 18px;
-//             cursor: pointer;
-//         }
-//     }
-
-//     .search-contant-list {
-//         margin-bottom: 20px;
-//     }
-
-//     .project-box {
-//         .project-contant {
-//             line-height: 30px;
-//             border-bottom: 1px solid #f0f0f0;
-//             padding: 10px 0;
-
-//             .project-title {
-//                 color: var(--thoughtware-blue);
-//                 font-size: 18px;
-//                 font-weight: var(--thoughtware-font-weight-bold);
-//                 height: 40px;
-//                 line-height: 40px;
-//             }
-
-//             .project-item-name {
-//                 font-weight: var(--thoughtware-font-weight-bold);
-//             }
-//         }
-
-//         .project-card-item {
-//             box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.31) 0px 0px 1px;
-//             width: 30%;
-//             margin: 10px;
-//             border-radius: 4px;
-//             padding: 10px;
-//             line-height: 30px;
-
-//             .project-card-contant {
-//                 display: flex;
-//                 justify-content: flex-start;
-//                 align-items: center;
-
-//                 img {
-//                     width: 36px;
-//                 }
-
-//                 .project-card-title {
-//                     color: #202d40;
-//                     font-weight: var(--thoughtware-font-weight-bold);
-//                 }
-
-//                 .project-card-item-name {
-//                     color: #d5d5d5
-//                 }
-//             }
-
-//             .project-card-bottom {
-//                 border-top: 1px solid #f0f0f0;
-//                 font-size: 12px;
-//             }
-//         }
-//     }
-// }
