--- a/src/work/components/WorkAside.scss
+++ b/src/work/components/WorkAside.scss
@@ -146,12 +146,20 @@
 
     .work-aside-page {
         width: 100%;
-        text-align: center;
-        padding-top: 10px;
-        height: 45px;
-        border-top: 1px solid #f0f0f0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px 10px;
+        background: var(--thoughtware-gray-600);
+        .work-aside-page-total {
+            font-size: 12px;
+            cursor: pointer;
+        }
+        .work-aside-page-ref {
+            font-size: 12px;
+            cursor: pointer;
+        }
     }
-
     .work-aside-bottom {
         text-align: center;
         font-size: 12px;
@@ -159,7 +167,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 5px 0;
         font-weight: 600;
         gap: 10px;
         .page-button {
