--- a/src/project/overview/components/Survey.scss
+++ b/src/project/overview/components/Survey.scss
@@ -79,6 +79,7 @@
         .burn-down-box {
             // width: calc(100% - 515px);
             flex: 1;
+            height: 500px;
             padding: var(--thoughtware-padding);
             background-color: #fff;
             border-radius: 4px;
