--- a/src/project/project/components/ProjectList.scss
+++ b/src/project/project/components/ProjectList.scss
@@ -3,6 +3,7 @@
     background-color: #fff;
     border-radius: 4px;
     margin-top: 15px;
+
     .home-project {
         display: flex;
         align-items: center;
@@ -19,7 +20,7 @@
         }
 
         .project-item {
-            max-width: 240px;
+            max-width: 260px;
             min-width: 204px;
             flex: 1;
             padding: 12px;
@@ -89,6 +90,10 @@
         }
     }
 }
+
+.project-tabs-search {
+    margin-top: 10px;
+}
 .project {
     // padding: var(--thoughtware-padding);;
     overflow: auto;
@@ -102,8 +107,8 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        height: 50px;
-        line-height: 50px;
+        height: 40px;
+        line-height: 40px;
         gap: 20px;
         .vertical-bar {
             width: 1px;
@@ -124,13 +129,13 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        height: 50px;
-        line-height: 50px;
+        height: 40px;
+        line-height: 40px;
         .project-tab{
             font-size: var(--thoughtware-font-13);;
             cursor: pointer;
-            height: 50px;
-            line-height: 50px;
+            height: 40px;
+            line-height: 40px;
             margin-right: 20px;
         }
         .project-tab:last-child {
