--- a/src/work/components/WorkTypeTab.scss
+++ b/src/work/components/WorkTypeTab.scss
@@ -4,6 +4,11 @@
     height: 42px;
     line-height: 42px;
     justify-content: space-between;
+    .tabe-bar-num {
+        font-size: 12px;
+        padding-left: 3px;
+        color: #999;
+    }
     .tabs-bar-select {
         border-bottom: 2px solid var(--thoughtware-blue);
         color: var(--thoughtware-blue);
