--- a/src/common/styles/_color.scss
+++ b/src/common/styles/_color.scss
@@ -115,6 +115,10 @@ $form-input-color: #e3e8f07d;
     height: 32px;
     margin-right: 5px;
 }
+.icon-40 {
+    width: 40px;
+    height: 40px;
+}
 .img-icon {
     width: 16px;
     height: 16px;
