--- a/src/home/common/components/HomePage.scss
+++ b/src/home/common/components/HomePage.scss
@@ -201,6 +201,10 @@
             gap: 10px;
         }
     }
+    .statictics-work {
+        display: flex;
+        gap: 10px;
+    }
 
     
    
