--- a/src/home/common/components/TodoStatistics.scss
+++ b/src/home/common/components/TodoStatistics.scss
@@ -1,19 +1,29 @@
-.statistics-workitem {
+.statistics-todotask {
     margin-top: 20px;
     flex: 1;
-    .statistics-workitem-title {
+    .statistics-todotask-title {
         width: 100%;
         font-weight: var(--thoughtware-font-weight-bold);
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-    .statistics-workitem-content {
+    .statistics-project-todotask-content {
+        gap: 10px;
+    }
+    .statistics-todotask-content {
         display: flex;
         align-items: center;
         justify-content: space-between;
         flex-wrap: wrap;
-        .statistics-workitem-box {
+        
+        .statistics-home-todotask-box {
+            width: calc(50% - 5px);
+        }
+        .statistics-project-todotask-box {
+            flex: 1;
+        }
+        .statistics-todotask-box {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -22,37 +32,22 @@
             margin-top: 10px;
             line-height: 35px;
             cursor: pointer;
-            width: calc(50% - 5px);
             padding: var(--thoughtware-padding);
             background-color: var(--thoughtware-gray-600);
             gap: 10px;
-            // .statistics-workitem-box-num {
-            //     font-size: 16px;
-            //     font-weight: 600;
-            // }
-            // .statistics-workitem-box-name {
-            //     color: #666;
-            // }
-            // .statistics-workitem-box-num:hover {
-            //     color: var(--thoughtware-blue);
-            // }
-            // .statistics-workitem-box-name:hover {
-            //     color: var(--thoughtware-blue);
-            // }
-            .statistics-workitem-box-num {
+            .statistics-todotask-box-num {
                 font-size: 16px;
                 font-weight: 600;
             }
-            .statistics-workitem-box-name {
+            .statistics-todotask-box-name {
                 color: #666;
             }
         }
-
-        .statistics-workitem-box:hover {
-            .statistics-workitem-box-num {
+        .statistics-todotask-box:hover {
+            .statistics-todotask-box-num {
                 color: var(--thoughtware-blue);
             }
-            .statistics-workitem-box-name {
+            .statistics-todotask-box-name {
                 color: var(--thoughtware-blue);
             }
             
