--- a/src/setting/common/components/Orga.scss
+++ b/src/setting/common/components/Orga.scss
@@ -16,10 +16,23 @@
         background-color: var(--thoughtware-gray-600);
 
         .orga-aside-name {
+            display: flex;
+            align-items: center;
             height: 40px;
             line-height: 40px;
-            padding: 0 20px;
+            padding: 0 28px;
             border-bottom: 1px solid #f0f0f0;
+            font-weight: 600;
+            gap: 5px;
+            .svg-icon {
+                cursor: pointer;
+            }
+        }
+        .orga-aside-back {
+            display: flex;
+            align-items: center;
+            font-weight: normal;
+           
         }
 
         // padding-top: 20px;
